enumcapsulate/tests/derive-tests/as_variant_mut/fail/enum/struct_variants.err.txt
error: proc-macro derive panicked
 --> /tests/derive-tests/as_variant_mut/fail/enum/struct_variants.rs:5:10
  |
5 | #[derive(AsVariantMut)]
  |          ^^^^^^^^^^^^
  |
  = help: message: called `Result::unwrap()` on an `Err` value: Error("Only enums with tuple variants can use this derive")
